WIAPASCAL CHANGE LOG
======================

2024/11/
        21 Added More Show of Paper Position in Demo
        19 Added ForceDirectories in Download
        18 Added Get/SetPages;
	   Added Download overload with String Array.
        12 Added DocHandling in Download;
	   Changed SettingsForm the Way duplex radiobutton enabled/checked;
	   Select/Settings Form auto destruct after execute;
        11 GetParamsCapabilities and SetParams only if ItemCategory<>wicAUTO;
	   Commented exception when Get/Set Params and Capabilities;
	   Added define UI_Tests for testing UI if Feeder or Range Editor Resolution;
	   SettingsForm set DocHandling if Feeder, set Resolution from Range editor;
        08 Changed the SettingForm Items ComboBox to a ListView with icons;
	   Changed Changed several things in SettingForm;
        07 Changed params of SelectDeviceItem;
	   Added use of GetDocumentHandling in Feeder (cannot test);
	   Moved wptMAX PaperType at end (Problems with XML Write);
	   Deleted use of initItemValues in SettingsForm.SelectCurrentItem
	   Added Feeder GroupBox in SettingsForm
        06 Added DocumentHandling for first Duplex tests (i need a Duplex Scanner);
	   Added GetSelectedItemSubItems;
	   Changed way GetProperty returns WIAProp_FLAG array 
        05 Renamed Interfaces property to xxxIntf;
	   Added property SelectedItem: PWIAItem;
	   Added method RefreshDeviceList;
	   SettingsForm select the first Item if started with -1;
	   Updated tests;
        04 Added TWIAManager.SelectDeviceItem

2024/10/
        31 Columns width adjustments in SelectForm
        30 Delphi Compatibility
        29 TWIADevice.GetProperty Process only WIA Types, added all Arrays/Ranges;
	   Changed names from PaperSize to PaperType;
	   Added functions THInchToSize/Str in PaperSizes;
	   Added Custom Paper Size in WIADevice and in SettingsForm;
	   Added Panels for PaperAlign/Size in SettingsForm.
        28 Added PIWiaItem2 as array of IWIAItem2;