@@ -1,7 +1,7 @@
 object WIASettingsSource: TWIASettingsSource
-  Left = 311
+  Left = 350
   Height = 440
-  Top = 122
+  Top = 127
   Width = 543
   ActiveControl = lvSourceItems
   BorderIcons = [biSystemMenu]
