@@ -1,0 +1,30 @@
+{"version":1,"strings":[
+{"hash":186780741,"name":"twiasettingssource.caption","sourcebytes":[83,101,116,116,105,110,103,115,32,111,102,32,87,73,65,32,83,111,117,114,99,101],"value":"Settings of WIA Source"},
+{"hash":378031,"name":"twiasettingssource.btrefreshundo.caption","sourcebytes":[85,110,100,111],"value":"Undo"},
+{"hash":180980756,"name":"twiasettingssource.btrefreshcurrent.caption","sourcebytes":[67,117,114,114,101,110,116],"value":"Current"},
+{"hash":180128884,"name":"twiasettingssource.btrefreshdefault.caption","sourcebytes":[68,101,102,97,117,108,116],"value":"Default"},
+{"hash":160978066,"name":"twiasettingssource.tbsource_scanner.caption","sourcebytes":[83,99,97,110,110,101,114],"value":"Scanner"},
+{"hash":15207290,"name":"twiasettingssource.label2.caption","sourcebytes":[80,97,112,101,114,32,84,121,112,101,32,58],"value":"Paper Type :"},
+{"hash":153421322,"name":"twiasettingssource.label3.caption","sourcebytes":[82,101,115,111,108,117,116,105,111,110,32,58],"value":"Resolution :"},
+{"hash":265574602,"name":"twiasettingssource.label4.caption","sourcebytes":[66,114,105,103,104,116,110,101,115,115,32,58],"value":"Brightness :"},
+{"hash":193724522,"name":"twiasettingssource.label5.caption","sourcebytes":[67,111,110,116,114,97,115,116,32,58],"value":"Contrast :"},
+{"hash":25733086,"name":"twiasettingssource.btpaperorientation.hint","sourcebytes":[80,97,112,101,114,32,79,114,105,101,110,116,97,116,105,111,110],"value":"Paper Orientation"},
+{"hash":177122426,"name":"twiasettingssource.label6.caption","sourcebytes":[66,105,116,32,68,101,112,116,104,32,58],"value":"Bit Depth :"},
+{"hash":12786250,"name":"twiasettingssource.label7.caption","sourcebytes":[73,109,97,103,101,32,84,121,112,101,32,58],"value":"Image Type :"},
+{"hash":48,"name":"twiasettingssource.btbrightness0.caption","sourcebytes":[48],"value":"0"},
+{"hash":100,"name":"twiasettingssource.btbrightnessd.caption","sourcebytes":[100],"value":"d"},
+{"hash":48,"name":"twiasettingssource.btcontrast0.caption","sourcebytes":[48],"value":"0"},
+{"hash":100,"name":"twiasettingssource.btcontrastd.caption","sourcebytes":[100],"value":"d"},
+{"hash":100,"name":"twiasettingssource.btresolutiond.caption","sourcebytes":[100],"value":"d"},
+{"hash":68331806,"name":"twiasettingssource.gbpaperalign.caption","sourcebytes":[80,97,112,101,114,32,65,108,105,103,110],"value":"Paper Align"},
+{"hash":257327934,"name":"twiasettingssource.trhalign.hint","sourcebytes":[72,111,114,105,122,111,110,116,97,108,32,65,108,105,103,110],"value":"Horizontal Align"},
+{"hash":48157550,"name":"twiasettingssource.trvalign.hint","sourcebytes":[86,101,114,116,105,99,97,108,32,65,108,105,103,110],"value":"Vertical Align"},
+{"hash":205588837,"name":"twiasettingssource.gbpapersize.caption","sourcebytes":[80,97,112,101,114,32,83,105,122,101],"value":"Paper Size"},
+{"hash":88,"name":"twiasettingssource.labelpapersize.caption","sourcebytes":[88],"value":"X"},
+{"hash":80460482,"name":"twiasettingssource.gbfeeder.caption","sourcebytes":[70,101,101,100,101,114],"value":"Feeder"},
+{"hash":90283609,"name":"twiasettingssource.rbfrontonly.caption","sourcebytes":[70,114,111,110,116,32,79,110,108,121],"value":"Front Only"},
+{"hash":91709179,"name":"twiasettingssource.rbfrontback.caption","sourcebytes":[70,114,111,110,116,47,66,97,99,107],"value":"Front/Back"},
+{"hash":164965705,"name":"twiasettingssource.rbbackonly.caption","sourcebytes":[66,97,99,107,32,79,110,108,121],"value":"Back Only"},
+{"hash":222924340,"name":"twiasettingssource.cbbackfirst.caption","sourcebytes":[66,97,99,107,32,70,105,114,115,116],"value":"Back First"},
+{"hash":127607113,"name":"twiasettingssource.cbusenativeui.caption","sourcebytes":[85,115,101,32,78,97,116,105,118,101,32,85,73],"value":"Use Native UI"}
+]}
